--- a/CSS/section__02.css
+++ b/CSS/section__02.css
@@ -1,15 +1,17 @@
 .section__02 {
-    width: 1018px;
-    height: 350px;
-    margin: 80px auto; 
-    display: flex; 
-    align-items: center; 
+    width: 1000 px;
+    height: 350 px;
+    margin: 0 px auto;
+    display: flex;
+    align-items: center;
+    margin-top: -72px;
+    /* margin-top: 100vw; */
 }
 
 .inner__section__02-text {
-    margin-top: -210px;
-    margin-left: 90px;
-    flex: 1; 
+    margin-top: -100px;
+    margin-left: 200px;
+    flex: 1;
 }
 
 .title__section-02 {
@@ -18,10 +20,12 @@
     font-family: Merriweather;
     font-size: 30px;
     font-weight: 900;
-    margin-top: 90px;
+    margin-top: 110px;
+    max-width: 300px;
 }
 
 .text__section-02 {
+    max-width: 400px;
     width: 400px;
     color: var(--greys-light-grey, #646D70);
     font-family: Rubik;
@@ -33,27 +37,101 @@
 }
 
 .btn__section-02 {
-    width: 90px;
-    height: 34px;
-    border-radius: 4px;
-    border: 1px solid var(--greys-light-grey, #646D70);
+    width: 90 px;
+    height: 34 px;
+    border-radius: 4 px;
+    border: 1 px solid var(--greys-light-grey, #646D70);
     color: #606B74;
     text-align: center;
     font-feature-settings: 'clig' off, 'liga' off;
     font-family: Rubik;
-    font-size: 12px;
+    font-size: 12 px;
     font-weight: 400;
-    margin-top: 41px;
+    margin-top: 41 px;
+    animation: wiggle 2s linear infinite;
 
 }
 
 .foto__section-02 {
-    width: 360px;
-    height: 430px;
+    margin: 0 px auto;
+    width: 360 px;
+    height: 430 px;
     opacity: 0.8;
-    margin-right: 60px;
-    margin-top: -132px;
-
+    margin-left: 360 px;
+    margin-right:300px ;
+    margin-top: 600 px;
+    animation: img_anim 5s infinite;
 }
 
 
+@media screen and (max-width: 900px) {
+    .section__02 {
+        display: block;
+        margin-left: 6px;
+    }
+
+    .title__section-02 {
+        font-size: 4vw;
+        margin-top: 40vw;
+        margin-left: -60vw;
+
+    }
+
+    .text__section-02 {
+        text-align: left;
+        max-width: 300px;
+        font-weight: -40;
+        font-size: 4vw;
+        margin-left: -56vw;
+        margin-top: 5vw;
+
+    }
+
+    .btn__section-02 {
+        margin-top: 10vw;
+        border-radius: 4px;
+        border: 1px solid var(--greys-light-grey, #646D70);
+        width: 19vw;
+        height: 9vw;
+        font-size: 3.5vw;
+        margin-left: -120vw;
+    }
+
+    .foto__section-02 {
+        margin-top: 10vw;
+        height: 95vw;
+        margin-left: 1vw;
+        margin-right:0px ;
+    }
+}
+
+@media screen and (min-width: 2000px){
+    .section__02{
+        max-height: 1200px;
+    }
+
+    .title__section-02{
+        margin-top: 50px;
+        margin-left: 600px;
+    }
+
+    .text__section-02 {
+        margin-top: 20px;
+        margin-left: 600px;
+        text-align: left;
+        font-size: 1vw;
+    }
+
+    .btn__section-02{
+        margin-left: 600px;
+        font-size: 30px;
+        margin-top: 10px;
+    }
+
+    .foto__section-02{
+        margin-right: 700px;
+        margin-top: -23px;
+    }
+
+
+}
