--- a/CSS/section__03.css
+++ b/CSS/section__03.css
@@ -1,40 +1,34 @@
-
-
-.section__03-head{
+.section__03-head {
     height: 60px;
-    width: 1160px;
+    width: 100%;
     margin: 80px auto;
     align-items: center;
     background: #26353B;
-    margin-top: -106px;
+    margin-top: 0px;
 }
 
 .section__03-body {
     height: 320px;
-    width: 1160px;
+    width: 100%;
     margin: 80px auto;
     align-items: center;
     background: #26353B;
     margin-top: -80px;
 }
 
-
-
-
 .container__title__section-03 {
     height: 100px;
     width: 100px;
-    margin-top:20px;
-    margin-left: 45px;
+    margin-top: 20px;
+    margin-left: 190px;
 
 }
 
 .container_text_section-03 {
-    margin-left: -40px;
+    margin-left: 120px;
     margin-top: -30px;
     display: flex;
 }
-
 
 .title__section-03 {
     margin-left: 120px;
@@ -44,7 +38,6 @@
     font-size: 30px;
     font-weight: 900;
 }
-
 
 .text__section-03 {
     color: var(--greys-white, #FFF);
@@ -66,4 +59,70 @@
     opacity: 0.7;
     width: 300px;
     margin-left: 50px;
-}  
+}
+
+@media screen and (max-width: 1001px) {
+    .section__03-head {
+        margin-top: 9vw;
+        position: center;
+        height: 10vw;
+        width: 106vw;
+        margin-left: 0px;
+    }
+
+    .section__03-body {
+        
+        margin-top: -27vw;
+        height: 125vw;
+        width: 150vw;
+        margin-left: -140px;
+    }
+
+    .title__section-03 {
+        margin-left: 20vw;
+        color: #fff;
+        margin-top: -15vw;
+        font-size: 7vw;
+    }
+
+    .container_text_section-03 {
+        color: #fff;
+        
+        display: block;
+        text-align: left;
+        margin-left: 170px;
+        /* margin-left: -12vw; */
+    }
+
+    .text__section-03 {
+        color: #fff;
+        margin-top: -5vw;
+        margin-left: 0px;
+        font-size: 4vw;
+    }
+
+    .text2__section-03 {
+        color: #fff;
+        margin-top: 5vw;
+        margin-left: 0vw;
+        font-size: 4vw;
+    }
+}
+
+@media screen and (min-width: 2000px){
+
+    .section__03-body{
+        margin: 0, auto;
+        margin-top: -110px;
+    }
+
+    .container__title__section-03{
+        margin-left: 670px;
+        font-size: 300px;
+    }
+    .container_text_section-03{
+        font-size: 100px;
+        margin-left: 600px;
+    }
+}
+
